crates/swc-optimizer/core/src/snapshots/qwik_core__test__destructure_args_colon_props3.snap
---
source: src/test.rs
expression: output
---
==INPUT==
import { component$, useSignal } from "@qwik.dev/core";
export default component$((props) => {
  const { test, ...rest } = props;
  const test = useSignal(rest["bind:value"]);
  return <>{test.value}</>;
});

============================= test.js ==
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_test_component_XXXXXXXXXXXX");
export default /*#__PURE__*/ componentQrl(
  /*#__PURE__*/ qrl(i_XXXXXXXXXXXX, "test_component_XXXXXXXXXXXX"),
);

Some(
  '{"version":3,"sources":["/user/qwik/src/test.tsx"],"names":[],"mappings":";;;AACA,6BAAe,6EAIZ"}',
);
============================= test.tsx_test_component_XXXXXXXXXXXX.js (ENTRY POINT)==
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { _fnSignal } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { _restProps } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
const _hf0 = (p0) => p0.test.value;
const _hf0_str = "p0.test.value";
export const test_component_XXXXXXXXXXXX = (props) => {
  const rest = _restProps(props, ["test"]);
  useSignal(rest["bind:value"]);
  return /*#__PURE__*/ _jsxSorted(
    _Fragment,
    null,
    null,
    _fnSignal(_hf0, [props], _hf0_str),
    1,
    "u6_0",
  );
};

Some(
  '{"version":3,"sources":["/user/qwik/src/test.tsx"],"names":[],"mappings":";;;;;mBAIY,GAFF,KAEO,KAAK;;0CAHI,CAAC;4BACC;;;IACb,UAAU,IAAI,CAAC,aAAa;IACzC,qBAAO;;;AACT"}',
);
/*
{
  "origin": "test.tsx",
  "name": "test_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_test_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    83,
    206
  ],
  "paramNames": [
    "props"
  ]
}
*/
== DIAGNOSTICS ==

[]
