crates/swc-optimizer/core/src/snapshots/qwik_core__test__example_10.snap
---
source: src/test.rs
expression: output
---
==INPUT==
import { $, component$ } from "@qwik.dev/core";
const Header = $((decl1, { decl2 }, [decl3]) => {
  const hola = ident1.no;
  ident2;
  const a = ident1 + ident3;
  const b = ident1 + ident3;
  ident4(ident5, [ident6], { ident7 }, { key: ident8 });
  class Some {
    prop = ident9;
    method() {
      return ident10;
    }
  }

  return <div onClick={(ident11) => ident11 + ident12} required={false} />;
});

============================= project/test.tsx ==
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Header_XXXXXXXXXXXX");
/*#__PURE__*/ qrl(i_XXXXXXXXXXXX, "Header_XXXXXXXXXXXX");
============================= project/test.tsx_Header_XXXXXXXXXXXX.tsx (ENTRY POINT)==
export const Header_XXXXXXXXXXXX = (decl1, { decl2 }, [decl3]) => {
  ident1.no;
  ident2;
  (ident1, ident3);
  (ident1, ident3);
  ident4(
    ident5,
    [ident6],
    {
      ident7,
    },
    {
      key: ident8,
    },
  );
  class Some {
    prop = ident9;
    method() {
      return ident10;
    }
  }
  return <div onClick={(ident11) => ident11 + ident12} required={false} />;
};
/*
{
  "origin": "project/test.tsx",
  "name": "Header_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Header",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Header_XXXXXXXXXXXX",
  "path": "project",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    66,
    409
  ],
  "paramNames": [
    "decl1",
    "{decl2}",
    "[decl3]"
  ]
}
*/
== DIAGNOSTICS ==

[]
