crates/swc-optimizer/core/src/snapshots/qwik_core__test__example_4.snap
---
source: src/test.rs
expression: output
---
==INPUT==
import { $, component$ } from "@qwik.dev/core";
export function App() {
  const Header = component$(() => {
    console.log("mount");
    return <div onClick={$((ctx) => console.log(ctx))} />;
  });
  return Header;
}

============================= test.tsx ==
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_App_Header_component_XXXXXXXXXXXX");
export function App() {
  const Header = /*#__PURE__*/ componentQrl(
    /*#__PURE__*/ qrl(i_XXXXXXXXXXXX, "App_Header_component_XXXXXXXXXXXX"),
  );
  return Header;
}
============================= test.tsx_App_Header_component_XXXXXXXXXXXX.tsx (ENTRY POINT)==
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_App_Header_component_div_onClick_XXXXXXXXXXXX");
export const App_Header_component_XXXXXXXXXXXX = () => {
  console.log("mount");
  return (
    <div
      onClick={/*#__PURE__*/ qrl(i_XXXXXXXXXXXX, "App_Header_component_div_onClick_XXXXXXXXXXXX")}
    />
  );
};
/*
{
  "origin": "test.tsx",
  "name": "App_Header_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_App_Header_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_App_Header_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    101,
    197
  ]
}
*/
============================= test.tsx_App_Header_component_div_onClick_XXXXXXXXXXXX.tsx (ENTRY POINT)==
export const App_Header_component_div_onClick_XXXXXXXXXXXX = (ctx) => console.log(ctx);
/*
{
  "origin": "test.tsx",
  "name": "App_Header_component_div_onClick_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_App_Header_component_div_onClick",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_App_Header_component_div_onClick_XXXXXXXXXXXX",
  "path": "",
  "extension": "tsx",
  "parent": "App_Header_component_XXXXXXXXXXXX",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    162,
    187
  ],
  "paramNames": [
    "ctx"
  ]
}
*/
== DIAGNOSTICS ==

[]
